WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45135
TCMalloc_PageHeap doesn't hold a mutex while manipulating shared data
https://bugs.webkit.org/show_bug.cgi?id=45135
Summary
TCMalloc_PageHeap doesn't hold a mutex while manipulating shared data
Alexey Proskuryakov
Reported
2010-09-02 15:13:17 PDT
I think that this causes some crashes when dispatch_resume() is called too many times. <
rdar://problem/7823714
>
Attachments
proposed fix
(3.73 KB, patch)
2010-09-02 15:19 PDT
,
Alexey Proskuryakov
darin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(3.72 KB, patch)
2010-09-03 10:17 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-09-02 15:19:55 PDT
Created
attachment 66420
[details]
proposed fix
WebKit Commit Bot
Comment 2
2010-09-02 23:45:02 PDT
Comment on
attachment 66420
[details]
proposed fix Rejecting patch 66420 from commit-queue. Failed to run "['WebKitTools/Scripts/build-webkit', '--release']" exit_code: 1 Last 500 characters of output: 14D857B50A469C100032146C.sh === BUILDING AGGREGATE TARGET All OF PROJECT JavaScriptCore WITH CONFIGURATION Release === Checking Dependencies... ** BUILD FAILED ** The following build commands failed: JavaScriptCore: Distributed-CompileC /Users/eseidel/Projects/CommitQueue/WebKitBuild/JavaScriptCore.build/Release/JavaScriptCore.build/Objects-normal/i386/FastMalloc.o /Users/eseidel/Projects/CommitQueue/JavaScriptCore/wtf/FastMalloc.cpp normal i386 c++ com.apple.compilers.gcc.4_2 (1 failure) Full output:
http://queues.webkit.org/results/3919080
Alexey Proskuryakov
Comment 3
2010-09-03 10:17:20 PDT
Created
attachment 66516
[details]
patch for landing With Leopard build fix.
WebKit Commit Bot
Comment 4
2010-09-03 11:03:29 PDT
Comment on
attachment 66516
[details]
patch for landing Clearing flags on attachment: 66516 Committed
r66741
: <
http://trac.webkit.org/changeset/66741
>
WebKit Commit Bot
Comment 5
2010-09-03 11:03:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug